PayPal integration
Working paypal integration

copyright notice

Donations WIP

Donation works

NumberPicker credits

Move donations progress dialog into Donations

Stylez

jdb task

Layout fixes

It's not a charity (donate button not allowed)

Typo

Final handler

Findbugs task

Updated PayPal library (1.1), fixed thread bug

WS

Cancel donation button

Rename spinner id

Remove need for static inner classes

Just use runOnUiThread

Cancel donate dialog

Make findbugs happy

Remove legacy code

typo

Hide donation button when user has made a donation, and display msg

NumberPicker: use floats, and a 0.5 increment